# alg2-project

./: .gitignore  CMakeLists.txt  Doxyfile  run_tests.py
src/: main.cpp
test-data/: TestData10_OilPlatforms.txt  TestData10_PumpingStations.txt  TestData10_Results.txt  TestData1500_OilPlatforms.txt  TestData1500_PumpingStations.txt  TestData1500_Results.txt  TestData80_OilPlatforms.txt  TestData80_PumpingStations.txt  TestData80_Results.txt
